--- a/package.json
+++ b/package.json
@@ -22,10 +22,8 @@
     "url": "https://github.com/dherges/ng-packagr/issues"
   },
   "bin": {
-    "ng-packagr": "./cli/main.js"
+    "ng-packagr": "./dist/cli/main.js"
   },
-  "main": "./public_api.js",
-  "typings": "./public_api.d.ts",
   "dependencies": {
     "@ngtools/json-schema": "^1.1.0",
     "autoprefixer": "^7.1.1",
@@ -115,5 +113,10 @@
     "test": "yarn build && yarn test:specs && yarn integration:samples && yarn integration:specs && yarn integration:consumers",
     "commitmsg": "commitlint -e",
     "gh-pages": "gh-pages -d docs/ghpages"
-  }
+  },
+  "main": "dist/ng-packagr.js",
+  "typings": "dist/ng-packagr.d.ts",
+  "files": [
+    "dist"
+  ]
 }
