--- a/package.json
+++ b/package.json
@@ -98,7 +98,7 @@
   "scripts": {
     "prebuild": "rimraf dist && yarn schema",
     "build": "tsc -p src/tsconfig.packagr.json",
-    "postbuild": "node ./scripts/postbuild.js",
+    "postbuild": "node ./scripts/postbuild.js && chmod +x dist/cli/main.js",
     "schema": "json2ts --input src/ng-package.schema.json --output src/ng-package.schema.ts",
     "prerelease": "yarn build",
     "release": "standard-version --message 'release: cut v%s'",
